i18n/es/docusaurus-plugin-content-docs/version-21/settings/compatibility.md
---
id: compatibility
title: Página de compatibilidad
---

La página Compatibilidad agrupa los parámetros relacionados con el mantenimiento de la compatibilidad con versiones anteriores de 4D.

> El número de opciones mostradas depende de la versión de 4D con la que se creó la base de datos/proyecto original, así como de los ajustes modificados en esta base de datos/proyecto.  
> El número de opciones mostradas depende de la versión de 4D con la que se creó la base de datos/proyecto original, así como de los ajustes modificados en esta base de datos/proyecto. Para las opciones de compatibilidad más antiguas, consulte la [página Compatibilidad](https://doc.4d.com/4Dv20/4D/20.2/Compatibility-page.300-6750362.en.html) en **doc.4d.com**.

- **Utilizar la capa de red heredada**: a partir de 4D v15, las aplicaciones 4D proponen una nueva capa red, llamada *ServerNet*, para manejar las comunicaciones entre 4D Server y las máquinas 4D remotas (clientes). La antigua capa de red ha quedado obsoleta, pero se mantiene para garantizar la compatibilidad con las bases existentes. Utilizando esta opción, puede activar la antigua capa de red en cualquier momento en sus aplicaciones 4D Server dependiendo de sus necesidades. *ServerNet* se utiliza automáticamente para las nuevas bases y las bases convertidas a partir de una versión v15 o posterior. Tenga en cuenta que, en caso de modificación, deberá reiniciar la aplicación para que se tenga en cuenta el cambio. Toda aplicación cliente que estuviera conectada también debe reiniciarse para poder conectarse con la nueva capa de red.
  **Nota**: esta opción también puede gestionarse por programación utilizando el comando `SET DATABASE PARAMETER`.

- **Utilizar XPath estándar**: por defecto, esta opción está desmarcada para las bases convertidas desde una versión 4D anterior a la v18 R3, y marcada para las bases creadas con 4D v18 R3 y superiores. A partir de la v18 R3, la implementación de XPath en 4D ha sido modificada para ser más compatible y soportar más predicados. Como consecuencia, las funcionalidades no estándar de la implementación anterior ya no funcionan. Incluyen:

  - el caracter inicial "/" no es sólo el nodo raíz - la utilización del caracter / como primer caracter en una expresión XPath no declara una ruta absoluta desde el nodo raíz
  - no hay nodo actual implícito - el nodo actual debe incluirse en la expresión XPath
  - no hay búsquedas recursivas en las estructuras repetidas: sólo se analiza el primer elemento. \

  Aunque no es estándar, es posible que desee seguir utilizando estas funcionalidades para que su código siga funcionando como antes -- en este caso, basta con establecer la opción *desmarcarcada*. Por otra parte, si su código no se basa en la implementación no estándar y si desea beneficiarse de las funcionalidades extendidas de XPath en sus bases de datos (como se describe en el comando [`DOM Find XML element`](../commands-legacy/dom-find-xml-element.md)), asegúrese de que la opción \**Utilizar XPath estándar* esté *marcada*.

- **Utilizar LF como caracter de fin de línea en macOS**: a partir de 4D v19 R2 (y 4D v19 R3 para archivos XML), 4D escribe archivos texto con salto de línea (LF) como caracter de fin de línea (EOL) por defecto en lugar de CR (CRLF para xml SAX) en macOS en nuevos proyectos. Si desea beneficiarse de este nuevo comportamiento en proyectos convertidos a partir de versiones anteriores de 4D, marque esta opción. Ver [`TEXT TO DOCUMENT`](../commands-legacy/text-to-document.md), [`Document to text`](../commands-legacy/document-to-text.md), y [XML SET OPTIONS](../commands-legacy/xml-set-options.md).

- \*\*No añadir un BOM al escribir un archivo de texto unicode por defecto:\*\*a partir de 4D v19 R2 (y 4D v19 R3 para archivos XML), 4D escribe archivos de texto sin BOM ("Byte order mark") por defecto. En las versiones anteriores, los archivos texto se escribían con un BOM por defecto. Seleccione esta opción si desea activar el nuevo comportamiento en los proyectos convertidos. Ver [`TEXT TO DOCUMENT`](../commands-legacy/text-to-document.md), [`Document to text`](../commands-legacy/document-to-text.md), y [XML SET OPTIONS](../commands-legacy/xml-set-options.md).

- **Mapear valores NULL a valores en blanco sin marcar por defecto una creación de campo**: para un mejor cumplimiento con las especificaciones ORDA, en bases de datos creadas con 4D v19 R4 y superiores, la propiedad de campo **Mapear valores NULL a valores en blanco** no está marcada por defecto cuando creas campos. Puede aplicar este comportamiento por defecto a sus bases de datos convertidas marcando esta opción (se recomienda trabajar con valores Null, ya que están totalmente soportados por [ORDA](../ORDA/overview.md).

- **Impresión sin bloqueo**: a partir de 4D v20 R4, cada proceso tiene sus propias configuraciones de impresión (opciones de impresión, impresora actual, etc.), lo que le permite ejecutar múltiples trabajos de impresión simultáneamente. Marque esta opción si desea beneficiarse de esta nueva implementación en sus proyectos 4D convertidos o bases de datos convertidas de modo binario a modo proyecto. **Si se deja sin marcar**, se aplica la implementación anterior: la configuración actual de impresión 4D se aplica globalmente, la impresora se pone en modo "ocupado" cuando hay un trabajo de impresión en marcha, se debe llamar a `CLOSE PRINTING JOB` para que la impresora esté disponible para el siguiente trabajo de impresión (consulte la documentación anterior de 4D para más información).

- **Guardar el color y las coordenadas de la estructura en un archivo catalog_editor.json separado**: a partir de 4D v20 R5, cambios realizados en el editor de estructura en relación a la apariencia gráfica de tablas y campos (color, posición, orden...) se guardan en un archivo independiente llamado `catalog_editor.json`, almacenado en la carpeta [Sources](../Project/architecture.md#sources) del proyecto. Esta nueva arquitectura de archivos facilita la gestión de conflictos en aplicaciones VCS, ya que el archivo `catalog.4DCatalog` ahora contiene sólo cambios cruciales en la estructura de la base de datos. Por razones de compatibilidad, esta funcionalidad no está habilitada por defecto en proyectos convertidos de versiones anteriores de 4D, necesita marcar esta opción. Cuando la función está habilitada, el archivo `catalog_editor.json` se crea en la primera modificación en el editor de estructuras.